@@ -1,3 +1,4 @@
+	* supports calculating sha1 file-hashes when creating torrents
 	* made the send_buffer_watermark performance warning more meaningful
 	* supports complete_ago extension
 	* dropped zlib as a dependency and builds using puff.c instead
